--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
         <title>React and Webpack4</title>
     </head>
     <body>
-        <section id="wrapper"></section>
+        <div id="wrapper"></div>
     </body>
 </html>
